Fix: clean price and amount inputs, if market was changed. Price field align polish (#338)

--- a/src/containers/Order/Order.pcss
+++ b/src/containers/Order/Order.pcss
@@ -348,8 +348,10 @@
             }
 
             &__input {
+              align-items: center;
+              display: flex;
+              height: 100%;
               margin-left: calc(var(--gap) * 0.34);
-              margin-top: calc(var(--gap) * 1.5);
 
               input,
               &__price {
